// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`introspectEnums > should handle multiple enums 1`] = `
[
  {
    "name": "enum_users_status",
    "schema": "public",
    "values": [
      "active",
      "inactive",
    ],
  },
  {
    "name": "enum_posts_category",
    "schema": "public",
    "values": [
      "news",
      "blog",
      "tutorial",
    ],
  },
]
`;

exports[`introspectEnums > should map enum type with ordered values 1`] = `
[
  {
    "name": "enum_users_status",
    "schema": "public",
    "values": [
      "active",
      "inactive",
      "banned",
    ],
  },
]
`;

exports[`introspectEnums should handle multiple enums 1`] = `
[
  {
    "name": "enum_users_status",
    "schema": "public",
    "values": [
      "active",
      "inactive",
    ],
  },
  {
    "name": "enum_posts_category",
    "schema": "public",
    "values": [
      "news",
      "blog",
      "tutorial",
    ],
  },
]
`;

exports[`introspectEnums should map enum type with ordered values 1`] = `
[
  {
    "name": "enum_users_status",
    "schema": "public",
    "values": [
      "active",
      "inactive",
      "banned",
    ],
  },
]
`;
